--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
     "parserOptions": {
         "ecmaVersion": 6
+    },
+    "extends": [
+        "eslint:recommended"
+    ],
+    "env": {
+        "node": true
     }
 }
