--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "botbuilder": "3.5.3",
     "dotenv-extended": "1.0.4",
     "nodemon": "1.11.0",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
+    "request": "2.79.0",
+    "request-promise": "4.1.1",
     "restify": "4.3.0"
   },
   "devDependencies": {
     "gulp": "3.9.1",
     "gulp-eslint": "3.0.1",
-    "eslint-plugin-node":"3.0.5",
     "run-sequence": "1.2.2"
   }
 }
