--- a/package.json
+++ b/package.json
@@ -16,7 +16,22 @@
     "nodemon": "1.11.0",
     "request": "2.79.0",
     "request-promise": "4.1.1",
-    "restify": "4.3.0"
+    "restify": "4.3.0",
+    "@angular/common": "2.4.4",
+    "@angular/compiler": "2.4.4",
+    "@angular/core": "2.4.4",
+    "@angular/http": "2.4.4",
+    "@angular/platform-browser": "2.4.4",
+    "@angular/platform-browser-dynamic": "2.4.4",
+    "@angular/forms": "2.4.4",
+    "@angular/router": "3.4.4",
+    "@angular/material": "2.0.0-beta.1",
+    "core-js": "2.4.1",
+    "rxjs": "5.0.3",
+    "zone.js": "0.7.6",
+    "systemjs": "0.19.42",
+    "bootstrap": "4.0.0-alpha.6",
+    "jquery": "3.1.1"
   },
   "devDependencies": {
     "gulp": "3.9.1",
