--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "msdb-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "App.js",
   "scripts": {
-    "debug": "nodemon app.js",
-    "start": "node app.js",
+    "debug": "nodemon App.js",
+    "start": "node App.js",
     "test": "gulp test"
   },
   "author": "Ugo Parlange",
@@ -25,7 +25,6 @@
     "@angular/platform-browser-dynamic": "2.4.4",
     "@angular/forms": "2.4.4",
     "@angular/router": "3.4.4",
-    "@angular/material": "2.0.0-beta.1",
     "core-js": "2.4.1",
     "rxjs": "5.0.3",
     "zone.js": "0.7.6",
