--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "debug": "nodemon App.js",
-    "start": "node App.js",
+    "debug": "nodemon app.js",
+    "start": "node app.js",
     "test": "gulp test"
   },
   "author": "Ugo Parlange",
