--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "zone.js": "0.7.6",
     "systemjs": "0.19.42",
     "bootstrap": "4.0.0-alpha.6",
-    "jquery": "3.1.1"
+    "jquery": "3.1.1",
+    "highlight.js": "9.9.0"
   },
   "devDependencies": {
     "gulp": "3.9.1",
