--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msdb-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "App.js",
   "scripts": {
@@ -11,23 +11,23 @@
   "author": "Ugo Parlange",
   "license": "ISC",
   "dependencies": {
-    "botbuilder": "3.6.0",
+    "botbuilder": "3.7.0",
     "dotenv-extended": "1.0.4",
-    "request": "2.79.0",
+    "request": "2.80.0",
     "request-promise": "4.1.1",
     "restify": "4.3.0",
-    "@angular/common": "2.4.6",
-    "@angular/compiler": "2.4.6",
-    "@angular/core": "2.4.6",
-    "@angular/http": "2.4.6",
-    "@angular/platform-browser": "2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/forms": "2.4.6",
-    "@angular/router": "3.4.6",
+    "@angular/common": "4.0.0-rc.2",
+    "@angular/compiler": "4.0.0-rc.2",
+    "@angular/core": "4.0.0-rc.2",
+    "@angular/http": "4.0.0-rc.2",
+    "@angular/platform-browser": "4.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "4.0.0-rc.2",
+    "@angular/forms": "4.0.0-rc.2",
+    "@angular/router": "4.0.0-rc.2",
     "core-js": "2.4.1",
-    "rxjs": "5.1.0",
-    "zone.js": "0.7.6",
-    "systemjs": "0.20.5",
+    "rxjs": "5.2.0",
+    "zone.js": "0.7.7",
+    "systemjs": "0.20.9",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "3.1.1",
     "highlight.js": "9.9.0"
